# GRM

./: CMakeLists.txt  GRMSegmenterTemplate.h  GRMSegmenterTemplate.txx  README.md  README.md~  grm-copyright.txt  otb-module.cmake
Applications/: CMakeLists.txt  FullLambdaScheduleSegmentation.cxx  RegionMergingSegmentation.cxx  SpringSegmentation.cxx
Code/: CMakeLists.txt  lsrmBaatzSegmenter.h  lsrmBaatzSegmenter.txx  lsrmContourOperations.cpp  lsrmContourOperations.h  lsrmDataStructures.h  lsrmFullLambdaScheduleSegmenter.h  lsrmFullLambdaScheduleSegmenter.txx  lsrmGraph.h  lsrmGraphOperations.h  lsrmGraphOperations.txx  lsrmGraphOperations.txx~  lsrmGraphToOtbImage.h  lsrmGraphToOtbImage.txx  lsrmNeighborhood.cpp  lsrmNeighborhood.h  lsrmSegmenter.h  lsrmSpringSegmenter.h  lsrmSpringSegmenter.txx
app/: CMakeLists.txt  CMakeLists.txt~  GenericRegionMerging.cxx  otbGRM.cxx
code/: CMakeLists.txt
code/apps/: BaatzSegmentation.cxx  FLSASegmentation.cxx
code/src/algo/: baatz-algorithm.h  baatz-algorithm.txx  fls-algorithm.txx
code/src/encoder/: contour-encoder.cxx  contour-encoder.h
code/src/grm_core/: grm-algorithm.h  grm-algorithm.txx  grm-interface.h  grm-interface.txx  grm-region.txx
code/src/utilities/: mask-neighborhood.cxx
img/: test.tif
include/: grmBaatzSegmenter.h  grmBaatzSegmenter.txx  grmDataStructures.h  grmFullLambdaScheduleSegmenter.h  grmFullLambdaScheduleSegmenter.txx  grmGraph.h  grmGraphOperations.h  grmGraphOperations.txx  grmGraphToOtbImage.h  grmGraphToOtbImage.txx  grmMacroGenerator.h  grmNeighborhood.h  grmSegmenter.h  grmSpringSegmenter.h  grmSpringSegmenter.txx  lpContour.h
src/: CMakeLists.txt  grmBaatzSegmenter.h  grmBaatzSegmenter.txx  grmDataStructures.h  grmFullLambdaScheduleSegmenter.h  grmFullLambdaScheduleSegmenter.txx  grmGraph.h  grmGraphOperations.txx~  grmGraphToOtbImage.txx~  grmNeighborhood.cxx  grmNeighborhood.h  grmSegmenter.h  grmSpringSegmenter.h  grmSpringSegmenter.txx  lpContour.cxx  lpContour.h
src/Applications/: BaatzSegmentation.cxx  CMakeLists.txt  EuclideanDistanceSegmentation.cxx  FLSASegmentation.cxx
test/: CMakeLists.txt  CMakeLists.txt~
